Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberNumber.quorum
number n = cast(number, 7.5)