Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjNumber.quorum
Number n = cast(Number, 7.5)